Archive2/8d/f3e1615916baf1/output
main.cpp: In function 'int main()':
main.cpp:8:16: error: converting to 'X' from initializer list would use explicit constructor 'X::X(int, int)'
     func({1, 2});
                ^
